Feat: Complete transcoding flow
